--- a/public/home.css
+++ b/public/home.css
@@ -2,6 +2,9 @@
  * Globals
  */
 
+#logo {
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
 
 /* Custom default button */
 .btn-secondary,
@@ -18,7 +21,6 @@
 
 body {
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 .cover-container {
